--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=77.0",
+    "setuptools>=60.0",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
@@ -12,12 +12,19 @@ description = "A Python wrapper for the Concurrent Hybrid Iterated Local Search 
 authors = [{name = "Kenneth Langedal", email = "kenneth.langedal@hotmail.com"}]
 readme = "README.md"
 requires-python = ">=3.7"
-license = "MIT"
-license-files = ["LICEN[CS]E*"]
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent"
+    "Programming Language :: Python :: 3"
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/KennethLangedal/CHILS"
+
+[tool.cibuildwheel]
+
+[[tool.cibuildwheel.overrides]]
+select = "*-macos*"
+before-build = "brew install gcc"
+
+[[tool.cibuildwheel.overrides]]
+select = "*-win*"
+before-build = "choco install make mingw"
