--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -21,8 +21,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
         env:
-          # CIBW_ARCHS: "x86_64"
-          # The repair-wheel-command is used to repair the wheels, which is not needed for this project
+          CIBW_ARCHS: auto
           CIBW_REPAIR_WHEEL_COMMAND: ""
         with:
           output-dir: wheels
