--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ classifiers = [
 [tool.cibuildwheel]
 
 [[tool.cibuildwheel.overrides]]
+select = "manylinux-x86_64"
+before-build = "yum install -y gcc"
+
+[[tool.cibuildwheel.overrides]]
 select = "*-macos*"
 before-build = "brew install gcc"
 
