--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -22,6 +22,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.19.2
         env:
           CIBW_ARCHS: auto
+          CIBW_SKIP: "cp38-macosx_arm64"
         with:
           output-dir: wheels
 
