--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
         env:
+          CIBW_BUILD: "cp${{ matrix.python-version == '3.10' && '310' || (matrix.python-version == '3.11' && '311' || (matrix.python-version == '3.12' && '312' || '313')) }}-*"
           CIBW_SKIP: "*-musllinux_*"
         with:
           output-dir: wheels
