--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Check Python version and path
+        run: |
+          python --version
+          where python
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
         env:
