--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }} for Python 3.13.5
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -17,10 +17,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python 3.13.5
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13.5'
+          check-latest: true
+          allow-prereleases: true
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
@@ -34,5 +36,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-${{ matrix.os }}-py3.13
+          name: cibw-wheels-${{ matrix.os }}
           path: ./wheels
