--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -17,11 +17,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
         env:
           CIBW_BUILD: py3-none
+          CIBW_ARCHS: "auto"
           CIBW_SKIP: "*-musllinux_*"
+          CIBW_BEFORE_BUILD: "pip install setuptools wheel"
+          CIBW_BUILD_VERBOSITY: 1
         with:
           output-dir: wheels
 
