--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -17,17 +17,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Find MinGW bin path
+      - name: Find libgomp-1.dll
         shell: pwsh
         run: |
-          $chocoInstallDir = "$env:ChocolateyInstall"
-          $mingwPath = Get-ChildItem -Path $chocoInstallDir -Filter "mingw64" -Recurse -Directory -ErrorAction SilentlyContinue | Select-Object -ExpandProperty FullName | Select-Object -First 1
-          if ($mingwPath) {
-              $mingwBinPath = Join-Path $mingwPath "bin"
-              echo "Found MinGW bin path: $mingwBinPath"
-              echo "MINGW_BIN_PATH=$mingwBinPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          $libgompPath = Get-ChildItem -Path "C:" -Filter "libgomp-1.dll" -Recurse -ErrorAction SilentlyContinue | Select-Object -ExpandProperty FullName | Select-Object -First 1
+          if ($libgompPath) {
+              echo "Found libgomp-1.dll at: $libgompPath"
+              echo "LIBGOMP_DLL_PATH=$libgompPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           } else {
-              Write-Error "MinGW bin path not found!"
+              Write-Error "libgomp-1.dll not found on C: drive!" # This will cause the step to fail
               exit 1
           }
 
@@ -37,7 +35,7 @@ jobs:
           CIBW_BUILD: cp310-*
           CIBW_SKIP: "*-musllinux_*"
           CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
-          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: 'delvewheel repair -w {dest_dir} {wheel} --add-path "${{ env.MINGW_BIN_PATH }}"'
+          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: 'delvewheel repair -w {dest_dir} {wheel} --add-dll "${{ env.LIBGOMP_DLL_PATH }}"'
         with:
           output-dir: wheels
 
