--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -12,22 +12,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Copy libgomp-1.dll to package directory
+      - name: Copy Windows DLLs to package directory
+        if: runner.os == 'Windows'
         shell: pwsh
-        run: Copy-Item -Path "C:\Julia\bin\libgomp-1.dll" -Destination "python\chils\libgomp-1.dll"
-
-      - name: Copy libwinpthread-1.dll to package directory
-        shell: pwsh
-        run: Copy-Item -Path "C:\Julia\bin\libwinpthread-1.dll" -Destination "python\chils\libwinpthread-1.dll"
-
-      - name: Copy libgcc_s_seh-1.dll to package directory
-        shell: pwsh
-        run: Copy-Item -Path "C:\Julia\bin\libgcc_s_seh-1.dll" -Destination "python\chils\libgcc_s_seh-1.dll"
+        run: |
+          Copy-Item -Path "C:\Julia\bin\libgomp-1.dll" -Destination "python\chils\libgomp-1.dll"
+          Copy-Item -Path "C:\Julia\bin\libwinpthread-1.dll" -Destination "python\chils\libwinpthread-1.dll"
+          Copy-Item -Path "C:\Julia\bin\libgcc_s_seh-1.dll" -Destination "python\chils\libgcc_s_seh-1.dll"
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.19.2
