--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -29,9 +29,12 @@ jobs:
         uses: pypa/cibuildwheel@v2.19.2
         env:
           CIBW_BUILD: cp310-*
+          CIBW_ARCHS: "auto aarch64"
           CIBW_SKIP: "*-musllinux_*"
           CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: 'delvewheel repair -w {dest_dir} {wheel}'
+          CIBW_BEFORE_BUILD_MACOS: "pip install delocate"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --wheel {wheel} --dest-dir {dest_dir}"
         with:
           output-dir: wheels
 
